--- a/app/templates/organization_create.html
+++ b/app/templates/organization_create.html
@@ -536,7 +536,7 @@
  }
 
  try {
- const response = await fetch('/api/organizations', {
+ const response = await fetch('/organizations', {
  method: 'POST',
  headers: {
  'Content-Type': 'application/json',
